# marsmoles

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json  localbuild.sh  ssh_client
include/: server.h
src/: main  main.c
